[package]
name = "dioxus-radio"
version = "0.3.0"
edition = "2021"
description = "Fully-typed global state management with a topics subscription system for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-radio"
repository = "https://github.com/dioxus-community/dioxus-radio"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[dependencies]
dioxus-lib = { git = "https://github.com/DioxusLabs/dioxus", default-features = false, features = ["macro", "hooks", "signals"], rev = "2f8f1859307f6effec6d033d2d1b4926dffb2de4" }
generational-box = { git = "https://github.com/DioxusLabs/dioxus/", rev = "2f8f1859307f6effec6d033d2d1b4926dffb2de4" }

[dev-dependencies]
dioxus = { features = ["desktop"], git = "https://github.com/DioxusLabs/dioxus", rev = "2f8f1859307f6effec6d033d2d1b4926dffb2de4" }
