[package]
name = "dioxus-radio"
version = "0.3.0"
edition = "2021"
description = "Fully-typed global state management with a topics subscription system for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-radio"
repository = "https://github.com/dioxus-community/dioxus-radio"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[dependencies]
dioxus-lib = { git = "https://github.com/DioxusLabs/dioxus", default-features = false, features = ["macro", "hooks", "signals"], rev = "e700e00b6a433867b5477a7c6729acdb5480ba03" }
generational-box = { git = "https://github.com/DioxusLabs/dioxus/", rev = "e700e00b6a433867b5477a7c6729acdb5480ba03" }

[dev-dependencies]
dioxus = { features = ["desktop"], git = "https://github.com/DioxusLabs/dioxus", rev = "e700e00b6a433867b5477a7c6729acdb5480ba03" }
