[package]
name = "dioxus-radio"
version = "0.3.0"
edition = "2021"
description = "Fully-typed global state management with a topics subscription system for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-radio"
repository = "https://github.com/dioxus-community/dioxus-radio"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[dependencies]
dioxus-lib = { default-features = false, features = ["macro", "hooks", "signals"], version = "0.6.0-alpha.4" }
generational-box = { version = "0.6.0-alpha.4" }

[dev-dependencies]
dioxus = { features = ["desktop"], version = "0.6.0-alpha.4" }
